Fix image centering on mobile

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a:hover {text-decoration: underline;}
 @media(max-width: 460px){
     body {padding-top: 32px}
     .jank {text-align: left}
-    img {display: block; margin-bottom: 24px; margin-left: auto; margin-right: auto;}
+    img {display: block; margin-bottom: 24px; text-align: center;}
 
 }
 
